# evm_client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
benchmark/: block_number.py
evm_client/: core.py  crypto_utils.py  errors.py  sync_client.py  types.py
evm_client/batch_client/: __init__.py  client_core.py  eth_client.py  utils.py
evm_client/contract/: __init__.py  contract.py  events.py  methods.py
evm_client/converters/: __init__.py  hex_to_int.py  null.py  timestamp.py
evm_client/core/: __init__.py  admin_core.py  debug_core.py  eth_core.py  net_core.py  utils.py  web3_core.py
evm_client/parsers/: __init__.py  base.py  block.py  hex_to_int.py  log.py  null.py  receipt.py  transaction.py  utils.py
evm_client/sync_client/: __init__.py  admin_client.py  client_core.py  eth_client.py  net_client.py  utils.py
evm_client/types/: __init__.py  eth_filter.py  eth_simulation.py  transaction.py
examples/: approve_erc20.py  constants.py  deposit_weth.py  erc20_balance.py  transfer_eth.py
tests/: batch_eth_client_test.py  constants.py  sync_admin_client_test.py  sync_eth_client_test.py  sync_net_client_test.py  test_contracts.py
tests/~/.config/nvim/.undo/: %home%bensa%Software%evm_client%evm_client%tests%sync_eth_client_test.py
